# pico-midi-host

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  monitor.sh  switch_tinyusb_branch.sh
.devcontainer/: Dockerfile  devcontainer.json
lib/freeRTOS/: FreeRTOSConfig.h
main/: CMakeLists.txt  main.c
src/: CMakeLists.txt  main.c  main.cpp  midi_app.c  midi_app.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
